# language-based-security

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  abi.c  alias.c  all.h  cfg.c  convenience.cpp  convenience.h  copy.c  emit.c  fold.c  live.c  load.c  main.c  main.cpp  mem.c  ops.h  parse.c  rega.c  simpl.c  spill.c  ssa.c  util.c
amd64/: all.h  emit.c
assignments/01/: good.c  overflow.c
assignments/02/: eis_test.c
assignments/04/: exploit.py  timing.c
minic/: CMakeLists.txt  mcc  runtime.c  util.c
parser/: Makefile  driver.cpp  driver.hpp  lexer.hpp  lexer.ll  parser.yy
qbe++/: .gitignore  CMakeLists.txt  Makefile  ast.hpp  driver.cpp  driver.hpp  lexer.ll  main.cpp  parser.yy  validate_visitor.hpp
